# cocos-db-test

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h
Classes/DebugModule/: ImguiLayer.h
Classes/DragonboneTest/: AppDelegate.cpp  BoundingBox.h  DragHelper.h
Classes/coreModule/: definitions.h  gameManager.cpp  gameManager.h
Classes/coreModule/enums/: layersEnum.h  scenesEnums.h  statesEnums.h
Classes/coreModule/layers/: mainMenu.h
Classes/coreModule/nodes/: nodeFactory.cpp  nodeFactory.h  nodeProperties.cpp  nodeProperties.h
Classes/coreModule/properties/: nodeProperties.h
Classes/coreModule/resources/: resourceManager.cpp  resourceManager.h
Classes/coreModule/resources/loaders/: jsonLoader.cpp  jsonLoader.h
Classes/coreModule/resources/settings/: settingManager.cpp  settingManager.h
Classes/coreModule/scenes/: generalScene.cpp  generalScene.h  mainScene.cpp  mainScene.h
Classes/coreModule/scenes/scenesFactory/: scenesFactoryInstance.cpp  scenesFactoryInstance.h
Classes/debugModule/: imGuiLayer.cpp  imGuiLayer.h  logManager.cpp  logManager.h
Classes/interfaceModule/: interfaceSystem.cpp  interfaceSystem.h
Classes/interfaceModule/widgets/: testWidget.cpp  testWidget.h
Classes/metaModule/: metaTabs.cpp  metaTabs.h
Classes/metaModule/tabs/: simpleTab.cpp  simpleTab.h
Classes/metaModule/widgets/: menuButton.cpp  menuButton.h
Classes/scenesModule/scenes/: mainMenu.h
Resources/: .gitignore
Resources/config/: setting.json  user_profile.json
Resources/images/characters/carnivorous-plant/anim/: cPlant_Settings.txt
Resources/images/characters/god-warrior-dagon/anim/: Dagon_settings.txt
Resources/images/characters/hedgehog-gunner/: HedgehogGunner_ske.json  HedgehogGunner_tex.json
Resources/images/characters/ice-yeti/anim/: IceYeti_Settings.txt
Resources/images/characters/jiangshi/anim/: Jiangshi_Settings.txt
Resources/images/characters/mountain-harpy/anim/: Harpy_Settings.txt
Resources/images/characters/orc-chief-grunt/: Grunt_ske.json  Grunt_tex.json
Resources/images/characters/orc-chief-grunt/anim/: Grunt_ske.json
Resources/images/characters/slimeDefender/anim/: spine_ske.json  spine_tex.json
Resources/images/characters/weretiger-maxima/anim/: MV Dragonbones tags.txt
Resources/largeResolution/properties/nodes/: example.json
Resources/nodes/menuScene/: metaTabs.json
Resources/nodes/menuScene/tabs/: simpleTab.json
Resources/nodes/menuScene/widgets/: menuButton.json
Resources/properties/: example.json
Resources/properties/database/buildings/: db.json
Resources/properties/database/characters/: db.json
Resources/properties/menuScene/: metaTabs.json
Resources/properties/menuScene/tabs/: simpleTab.json
Resources/properties/menuScene/widgets/: menuButton.json
Resources/properties/node/battle/: battleIncomeWidget.json  buildSlot.json
Resources/properties/node/battle/buildings/: orcCastle.json  slimeTree.json
Resources/properties/node/battle/characters/: mountainHarpy.json  slimeBasic.json  slimeCaster.json  slimeCasterB.json
Resources/properties/node/widgets/: cardProgressBar.json
Resources/properties/node/windows/: notifyWindow.json  windowBase.json
Resources/properties/nodeProperties/battle/: battleIncomeWidget.json  battleObject.json  buildSlot.json  iconLabel.json
Resources/properties/nodeProperties/battle/buildings/: barracks.json  base.json  camp.json  castle.json  gate.json  humanCastle.json  orcCastle.json
Resources/properties/nodeProperties/scenes/: battleScene.json
Resources/properties/noden/battle/: battleObject.json
Resources/properties/noden/scenes/: battleScene.json
Resources/properties/nodes/: example.json
Resources/properties/nodes/battle/: battleObject.json  buildSlot.json  iconLabel.json
Resources/properties/nodes/scenes/: battleScene.json
Resources/sounds/: sounds.json
cmake/: CompilerWarnings.cmake  DragonBones.cmake  ImGui.cmake
cocos2d/cocos/2d/: CCDrawNode.cpp  CCNode.cpp  CCNode.h  CCSprite.cpp
lib/: project_dependency.cmake
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
src/: AppDelegate.cpp  AppDelegate.h
src/battleModule/: base.cpp  base.h  battleField.cpp  battleField.h  battleObject.cpp  battleObject.h  battleScene.cpp  battleScene.h
src/battleModule/interface/: battleIncomeWidget.cpp  battleIncomeWidget.h  buildSlot.cpp  buildSlot.h  iconLabel.cpp  iconLabel.h
src/battleModule/playerData/: playerData.cpp  playerData.h
src/databasesModule/: buildingsDatabase.cpp  buildingsDatabase.h  charactersDatabase.cpp  charactersDatabase.h  databaseManager.h
src/debugModule/: heroProfileDebug.cpp  heroProfileDebug.h  soundLibraryDebug.cpp
src/interfaceModule/: customNodeTypes.cpp  customNodeTypes.h
src/interfaceModule/widgets/: cardProgressBar.cpp  cardProgressBar.h
src/interfaceModule/windows/: notifyWindow.cpp  notifyWindow.h
src/localProfile/: heroesProfileBlock.cpp  heroesProfileBlock.h
tests/: TestIntegration.cpp
utilities/: buildnum.ver  unitDatabase.py  updateAssets.py  updateAssetsInstruction.txt
(+33 files in other folders)
